xidlc/src/snapshots/xidlc__openapi__tests__merge_same_path_diff_methods.snap
---
source: xidlc/src/openapi.rs
expression: api_1
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "Api",
    "version": "v1"
  },
  "paths": {
    "/api/v1/user": {
      "get": {
        "responses": {
          "200": {
            "description": "Get user success 1"
          }
        }
      },
      "post": {
        "responses": {
          "200": {
            "description": "Post user success 1"
          }
        }
      }
    },
    "/api/v2/user": {
      "get": {
        "responses": {
          "200": {
            "description": "Get user success 2"
          }
        }
      },
      "post": {
        "responses": {
          "200": {
            "description": "Post user success 2"
          }
        }
      }
    },
    "x-random": "Value",
    "x-v1-api": true
  },
  "components": {
    "schemas": {
      "User2": {
        "type": "object",
        "properties": {
          "name": {
            "type": "string"
          }
        }
      }
    }
  }
}
