xidlc/src/snapshots/xidlc__openapi__tests__nest_open_apis.snap
---
source: xidlc/src/openapi.rs
expression: paths
---
{
  "/api/v1/status": {
    "get": {
      "description": "Get status",
      "responses": {}
    }
  },
  "/api/v1/user/": {
    "get": {
      "description": "Get user details",
      "responses": {}
    }
  },
  "/api/v1/user/foo": {
    "post": {
      "responses": {}
    }
  }
}
