xidlc/src/snapshots/xidlc__openapi__tests__openapi_custom_extension.snap
---
source: xidlc/src/openapi.rs
expression: api
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "version": ""
  },
  "paths": {},
  "x-tagGroup": "anything that serializes to Json"
}
